# xero-expense-audit

./: .env.example  .gitignore  README.md  audit.py  pyproject.toml
config/: ai.yaml  rules.yaml  xero.config.json
src/: ai_handler.py  constants.py  currency.py  fix_bills.py  queue.py  reference_data_loader.py  skiplist.py  supplier_audit.py  xero_auth.py  xero_client.py
src/commands/: director_loan.py  fix_bill.py  queue_mgmt.py  review.py  run.py  setup.py
src/validators/: bank_transactions.py  base.py  bills.py
